add and style about me and skills sections

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="container hero-section">
             <p class="tag">&ltSection&gt</p>
             <div class="text-container">
                 <p class="hero-supertext">Hi! my name is</p>
@@ -27,11 +27,26 @@
             </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
-        <div class="container">
+        <div class="container about-section">
             <p class="tag">&ltSection&gt</p>
-            <h2>About</h2>
-            <p></p>
-            <img src="" alt="">
+            <h2>About Me</h2>
+            <p class="about-section_discription">Hi, My  name is Dakota Hanks and I’ve been building websites since the beginning of my web developement journey in 2021, when I became curious about how the internet works. Since then, I have learned several technologies includding, but not limited to: HTML, CSS, Bootstrap, and Sass.</p>
+            <img src="./images/monochrome-me.jpg" alt="">
+            <p class="tag">&lt/Section&gt</p>
+        </div>
+        <div class="container skills-section">
+            <p class="tag">&ltSection&gt</p>
+            <h2>Skills</h2>
+            <p class="skills-section_discription">Here are some of the technologies that I've been working with:</p>
+            <div class="skills-section_container container">
+                <img src="./images/icons8-html-5-48.png" alt="html5">
+                <img src="./images/icons8-css3-48.png" alt="css3">
+                <img src="./images/icons8-git-48.png" alt="Git">
+                <img src="./images/icons8-github-48.png" alt="Github">
+                <img src="./images/icons8-javascript-48.png" alt="Javascript">
+                <img src="./images/icons8-wordpress-48.png" alt="wordpress">
+                <img src="./images/icons8-bootstrap-48.png" alt="bootstrap">
+            </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
     </main>
