--- a/index.html
+++ b/index.html
@@ -81,6 +81,23 @@
             </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
+        <div class="contact-section container">
+            <p class="tag">&ltSection&gt</p>
+            <h2>Contact</h2>
+            <p class="contact-section_discription">Intested in working together? Lets talk!</p>
+            <form action="https://formsubmit.co/dakotahanks1020@gmail.com" method="POST">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email address">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea name="message" class="form-control" id="message" rows="3"></textarea>
+                    <button class="btn btn-primary" type="submit">Send</button>
+                </div>
+            </form>
+            <p class="tag">&lt/Section&gt</p>
+        </div>
     </main>
 
     
