--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg ">
-            <img id="menu-icon" src="./images/icon-hamburger.svg" alt="">
+            <img id="menu-icon" src="./images/icon-hamburger.svg" alt="" onclick="openMobileMenu()">
         </nav>
     </header>
     <main>
+        <div id="menu" class="menu">
+            <img id="close" src="./images/icon-close.svg" onclick="closeMobileMenu()">
+            <ul>
+                <li><a href="#About" onclick="closeMobileMenu()">About</a></li>
+                <li><a href="#Skills" onclick="closeMobileMenu()">Skills</a></li>
+                <li><a href="#Projects" onclick="closeMobileMenu()">Projects</a></li>
+                <li><a href="#Contact" onclick="closeMobileMenu()">Contact</a></li>
+            </ul>
+        </div>
         <div class="container hero-section">
             <p class="tag">&ltSection&gt</p>
             <div class="text-container">
@@ -25,14 +34,14 @@
             </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
-        <div class="container about-section">
+        <div id="About" class="container about-section">
             <p class="tag">&ltSection&gt</p>
             <h2>About Me</h2>
             <p class="about-section_discription">Hi, My  name is Dakota Hanks and I’ve been building websites since the beginning of my web developement journey in 2021, when I became curious about how the internet works. Since then, I have learned several technologies includding, but not limited to: HTML, CSS, Bootstrap, and Sass.</p>
             <img src="./images/monochrome-me.jpg" alt="">
             <p class="tag">&lt/Section&gt</p>
         </div>
-        <div class="container skills-section">
+        <div id="Skills" class="container skills-section">
             <p class="tag">&ltSection&gt</p>
             <h2>Skills</h2>
             <p class="skills-section_discription">Here are some of the technologies that I've been working with:</p>
@@ -47,7 +56,7 @@
             </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
-        <div class="projects-section container">
+        <div id="Projects" class="projects-section container">
             <p class="tag">&ltSection&gt</p>
             <h2>Projects</h2>
             <div class="projects-section-container">
@@ -81,7 +90,7 @@
             </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
-        <div class="contact-section container">
+        <div id="Contact" class="contact-section container">
             <p class="tag">&ltSection&gt</p>
             <h2>Contact</h2>
             <p class="contact-section_discription">Intested in working together? Lets talk!</p>
@@ -102,5 +111,6 @@
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
