--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p class="tag">&ltSection&gt</p>
             <h2>Contact</h2>
             <p class="contact-section_discription">Intested in working together? Lets talk!</p>
-            <form action="https://formsubmit.co/dakotahanks1020@gmail.com" method="POST">
+            <form action="https://formsubmit.co/6b8c788a5514e11be1af45ad8e9f4144" method="POST">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name" name="name" placeholder="Name">
