fix card responsiveness issue on desktop

--- a/index.html
+++ b/index.html
@@ -67,33 +67,41 @@
             <p class="tag">&ltSection&gt</p>
             <h2>Projects</h2>
             <div class="projects-section-container" >
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/product-page.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Product Page</h5>
-                      <p class="card-text">I wanted to improve my Javascript abilites, so I decided to create a product page website that includes a slideshow on mobile view, a lightbox on desktop, and cart functionality. </p>
-                      <a href="https://github.com/Nano950/product-page-challenge" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
-                      <a href="https://nano950.github.io/product-page-challenge/" class="btn btn-primary">Live Project</a>
+                <div class="container">
+                    <div class="row"> 
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/product-page.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Product Page</h5>
+                              <p class="card-text">I wanted to improve my Javascript abilites, so I decided to create a product page website that includes a slideshow on mobile view, a lightbox on desktop, and cart functionality. </p>
+                              <a href="https://github.com/Nano950/product-page-challenge" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
+                              <a href="https://nano950.github.io/product-page-challenge/" class="btn btn-primary">Live Project</a>
+                            </div>
+                        </div>      
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="./images/ip-tracker.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Ip Tracker</h5>
+                              <p class="card-text">This project was all about working with different apis, and learning how to properly hand api keys. Major takeaway from this project is how to use gitignore to conceal important information (like api keys).</p>
+                              <a href="https://github.com/Nano950/IP-Address-tracker" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
+                              <a href="https://nano950.github.io/IP-Address-tracker/" class="btn btn-primary">Live Project</a>
+                            </div>
+                        </div>     
+
+                        <div class="card" style="width: 18rem;">
+                          <img src="./images/todo.png" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Todo Applet</h5>
+                            <p class="card-text">when I started to get the hang of Javascript, I wanted to find a project that really tested my skills at the time. making a todo list applet introducded me into CRUD apps, and how different elements of Javascript are used in webistes. One thing that I will continue to work on in this project especially is saving data using different methods such as through localstorage.</p>
+                            <a href="https://github.com/Nano950/Todo" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
+                            <a href="https://nano950.github.io/Todo/" class="btn btn-primary">Live Project</a>
+                          </div>
+                        </div>
+
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="./images/ip-tracker.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Ip Tracker</h5>
-                      <p class="card-text">This project was all about working with different apis, and learning how to properly hand api keys. Major takeaway from this project is how to use gitignore to conceal important information (like api keys).</p>
-                      <a href="https://github.com/Nano950/IP-Address-tracker" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
-                      <a href="https://nano950.github.io/IP-Address-tracker/" class="btn btn-primary">Live Project</a>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <img src="./images/todo.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Todo Applet</h5>
-                      <p class="card-text">when I started to get the hang of Javascript, I wanted to find a project that really tested my skills at the time. making a todo list applet introducded me into CRUD apps, and how different elements of Javascript are used in webistes. One thing that I will continue to work on in this project especially is saving data using different methods such as through localstorage.</p>
-                      <a href="https://github.com/Nano950/Todo" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
-                      <a href="https://nano950.github.io/Todo/" class="btn btn-primary">Live Project</a>
-                    </div>
-                  </div>
             </div>
             <p class="tag">&lt/Section&gt</p>
         </div>
