--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p class="tag">&ltSection&gt</p>
             <div class="text-container">
                 <p class="hero-supertext">Hi! my name is</p>
-                <h1>Dakota Hanks</h1>
+                <h1 id="hero-text"></h1>
                 <p class="hero-description">I make dynamic and responsive websites.</p>
             </div>
             <p class="tag">&lt/Section&gt</p>
@@ -75,28 +75,28 @@
                             <div class="card-body">
                               <h5 class="card-title">Product Page</h5>
                               <p class="card-text">I wanted to improve my Javascript abilites, so I decided to create a product page website that includes a slideshow on mobile view, a lightbox on desktop, and cart functionality. </p>
-                              <a href="https://github.com/Nano950/product-page-challenge" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
-                              <a href="https://nano950.github.io/product-page-challenge/" class="btn btn-primary">Live Project</a>
+                              <a href="https://github.com/Nano950/product-page-challenge" class="project-button btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
+                              <a href="https://nano950.github.io/product-page-challenge/" class="project-button btn btn-primary">Live Project</a>
                             </div>
-                        </div>      
+                        </div>
 
                         <div class="card" style="width: 18rem;">
                             <img src="./images/ip-tracker.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Ip Tracker</h5>
                               <p class="card-text">This project was all about working with different apis, and learning how to properly hand api keys. Major takeaway from this project is how to use gitignore to conceal important information (like api keys).</p>
-                              <a href="https://github.com/Nano950/IP-Address-tracker" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
-                              <a href="https://nano950.github.io/IP-Address-tracker/" class="btn btn-primary">Live Project</a>
-                            </div>
-                        </div>     
+                              <a href="https://github.com/Nano950/IP-Address-tracker" class="project-button btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
+                              <a href="https://nano950.github.io/IP-Address-tracker/" class="project-button btn btn-primary">Live Project</a>
+                            </div> 
+                        </div>
 
                         <div class="card" style="width: 18rem;">
                           <img src="./images/todo.png" class="card-img-top" alt="...">
                           <div class="card-body">
                             <h5 class="card-title">Todo Applet</h5>
                             <p class="card-text">when I started to get the hang of Javascript, I wanted to find a project that really tested my skills at the time. making a todo list applet introducded me into CRUD apps, and how different elements of Javascript are used in webistes. One thing that I will continue to work on in this project especially is saving data using different methods such as through localstorage.</p>
-                            <a href="https://github.com/Nano950/Todo" class="btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
-                            <a href="https://nano950.github.io/Todo/" class="btn btn-primary">Live Project</a>
+                            <a href="https://github.com/Nano950/Todo" class="project-button btn btn-primary"><img src="./images/icons8-github-48.png" alt=""></a>
+                            <a href="https://nano950.github.io/Todo/" class="project-button btn btn-primary">Live Project</a>
                           </div>
                         </div>
 
@@ -108,7 +108,7 @@
         <div id="Contact" class="contact-section container">
             <p class="tag">&ltSection&gt</p>
             <h2>Contact</h2>
-            <p class="contact-section_discription">Intested in working together? Lets talk!</p>
+            <p class="contact-section_discription">Intrested in working together? Lets talk!</p>
             <form action="https://formsubmit.co/6b8c788a5514e11be1af45ad8e9f4144" method="POST">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
@@ -117,14 +117,13 @@
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email address">
                     <label for="message" class="form-label">Message</label>
                     <textarea name="message" class="form-control" id="message" rows="3"></textarea>
-                    <button class="btn btn-primary" type="submit">Send</button>
+                    <button class="contact-button btn btn-primary" type="submit">Send</button>
                 </div>
             </form>
             <p class="tag">&lt/Section&gt</p>
         </div>
     </main>
 
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
